--- a/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
@@ -204,7 +204,7 @@
             {{bloqueos.comentarios}}
           </td>
           <a
-          title="Editar Folio"
+          title="Guardar Cambios"
           class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3"
           (click)="edit(bloqueos._id)"
           >
@@ -213,7 +213,7 @@
           </span>
         </a>
 
-        <a  title="Delete huesped"
+        <a  title="Eliminar Bloqueo"
             class="btn btn-icon btn-light btn-hover-danger btn-sm"
             (click)="edit(bloqueos._id)"
             >
