--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -1,9 +1,9 @@
 <div class="modal-content">
 <ng-container *ngIf="huesped.id == undefined">
   <div style="background-color: #00506a;" class="modal-header">
-    <div style="text-align: center; color: white;" class="modal-title h4 col-10 text-center"
+    <div style="text-align: center; color: white;" class="text-center modal-title h4 col-10"
       id="example-modal-sizes-title-lg">
-      NUEVA RESERVA / BLOQUEO
+      NUEVA RESERVA
       <!-- <label>
         {{huesped.folio}}</label> -->
     </div>
@@ -15,12 +15,12 @@
 
 </div>
 
-   <form (submit)="save(); open(content)" [formGroup]="formGroup" class="form form-label-right" style="background-color: #e6e9ed">
-    <div class="overlay overlay-block cursor-default modal-body" style="background-color: #e6e9ed">
+   <form (submit)="save(); open(content); customerServiceFetch()" [formGroup]="formGroup" class="form form-label-right" style="background-color: #e6e9ed">
+    <div class="cursor-default overlay overlay-block modal-body" style="background-color: #e6e9ed">
 
 <div class="row">
 <!--Hidden-->
-  <div class="form-group hidden">
+  <div class="hidden form-group">
     <div class="input-group">
       <input hidden name="datepicker"
              class="form-control"
@@ -50,7 +50,7 @@
 
 
   <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Rango de Fecha</label>
-  <div class="input-group mb-3 col-lg-9">
+  <div class="mb-3 input-group col-lg-9">
     <div class="input-group-prepend">
       <button style="border-top: 2px solid #dadcdf;border-bottom: 2px solid #dadcdf;border-left: 2px solid #dadcdf; background-color: transparent;" class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button">
         <i class="fa fa-calendar icon"></i>
@@ -88,7 +88,7 @@
   <!--Calendar Footer-->
     <ng-template #footerTemplate>
     <hr class="my-0">
-    <button class="btn btn-secondary btn-sm m-2 float-right" (click)="datepicker.close()">Confirmar</button>
+    <button class="float-right m-2 btn btn-secondary btn-sm" (click)="datepicker.close()">Confirmar</button>
     </ng-template>
   <!--Calendar Footer-->
 </div>
@@ -105,11 +105,10 @@
                     </div>
                     <input
                       style="background-color: #e6e9ed; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;  border-left: 2px solid #e6e9ed;"
-                      class="input-group form-control form-control-lg form-control-solid text-center"
+                      class="text-center input-group form-control form-control-lg form-control-solid"
                       #controladultos
                       placeholder=""
-                      type="number"
-                      max="6"
+                      disabled
                       name="adultos"
                       [value]="quantity"
                       formControlName="adultos"
@@ -145,9 +144,8 @@
                     </div>
                     <input
                       style="background-color: #e6e9ed; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf; border-left: 2px solid #e6e9ed;"
-                      type="number"
-                      max="6"
-                      class="input-group form-control form-control-lg form-control-solid text-center" placeholder=""
+                      disabled
+                      class="text-center input-group form-control form-control-lg form-control-solid" placeholder=""
                       name="ninos"
                       [value]="quantityNin"
                       value={{huesped.ninos}}
@@ -227,7 +225,7 @@
 
           <!--Contenido del Accordion-->
             <div  class="table-responsive angular-bootstrap-table">
-              <table *ngIf="bandera==false" class="table table-head-custom table-vertical-center overflow-hidden">
+              <table *ngIf="bandera==false" class="table overflow-hidden table-head-custom table-vertical-center">
                 <div class="font-weight-bold text-uppercase modal-header"> {{cuarto.replace("_"," ")}} </div>
                 <thead>
                   <th>
@@ -247,7 +245,7 @@
                 <ng-container *ngFor="let tipocuarto of cuartos">
                 <tbody *ngIf="tipocuarto.Numero == habitacionesDisponibles">
                   <tr>
-                    <td ><mat-checkbox (change)="preAsignar(tipocuarto.Numero,tipocuarto.Codigo)"></mat-checkbox> &nbsp; {{ tipocuarto.Numero }}</td>
+                    <td ><mat-checkbox [checked]="tipocuarto.value" #checked (change)="preAsignar(tipocuarto.Numero,tipocuarto.Codigo,checked.checked)"></mat-checkbox> &nbsp; {{ tipocuarto.Numero }}</td>
                     <td >{{ tipocuarto.Descripcion}}</td>
                     <td >{{ tipocuarto.Personas }} Adultos</td>
                     <td >{{ tipocuarto.Tarifa }}.00</td>
@@ -261,7 +259,7 @@
 <ng-container *ngIf="bandera==true">
   <ng-container *ngFor="let codigosCuarto of codigoCuarto;  let i = index">
     <div class="font-weight-bold text-uppercase modal-header">{{codigosCuarto.replace("_"," ")}}</div>
-        <table  class="table table-head-custom table-vertical-center overflow-hidden">
+        <table  class="table overflow-hidden table-head-custom table-vertical-center">
           <thead>
             <th>
               # de Cuarto
@@ -280,7 +278,7 @@
           <ng-container *ngFor="let tipocuarto of cuartos">
           <tbody *ngIf="tipocuarto.Numero == habitacionesDisponibles && tipocuarto.Codigo==codigosCuarto">
             <tr>
-              <td ><mat-checkbox (change)="preAsignar(tipocuarto.Numero,tipocuarto.Codigo)"></mat-checkbox> &nbsp; {{ tipocuarto.Numero }}</td>
+              <td ><mat-checkbox #checked (change)="preAsignar(tipocuarto.Numero,tipocuarto.Codigo,checked.checked)"></mat-checkbox> &nbsp; {{ tipocuarto.Numero }}</td>
               <td >{{ tipocuarto.Descripcion}}</td>
               <td >{{ tipocuarto.Personas }} Adultos</td>
               <td >{{ tipocuarto.Tarifa }}.00</td>
@@ -319,22 +317,23 @@
      </ng-container>
 
      <div style="background-color:#00506a;" class="modal-tittle">
-      <div style="color: white; padding-top: 1%; padding-bottom: 1%;" class="modal-title h5 col-12 text-center">
+      <div style="color: white; padding-top: 1%; padding-bottom: 1%;" class="text-center modal-title h5 col-12">
         Agrega Húesped
       </div>
   </div>
 
-    <div class="overlay overlay-block cursor-default modal-body" style="background-color: #dadcdf">
+    <div class="cursor-default overlay overlay-block modal-body" style="background-color: #dadcdf">
       <div class="form-group">
         <div class="row">
           <label class="form-label" for="form1">Buscar en Historico</label>
-          <div  class="input-group col-lg-12 text-center">
-              <input  type="search"
+          <div  class="text-center input-group col-lg-12">
+              <input  #filterName
+                      type="search"
                       placeholder="Busca por Nombre"
                       aria-label="Number"
                       matInput
                       formControlName="searchTerm"
-                      class="form-control col-lg-12 text-center"
+                      class="text-center form-control col-lg-12"
                       (keyup)="showList($event)"
                       value="{{searchValue}}"
                       oninput="this.value = this.value.toLowerCase()"
@@ -345,6 +344,7 @@
           </div>
         </div>
         <div  [style]="displayNone" class="name-container-dropdown">
+          <button type="button" (click)="closeList();filterName.value = '';limpiaInput() " class="btn btn-block" style="background-color: #025976; font-weight: bold; color: white;">Cancelar</button>
           <mat-selection-list  (click)="closeList(); onSelectHuesped(nombres.selectedOptions.selected[0]?.value)" #nombres [multiple]="false" >
             <mat-list-option *ngFor="let huesped of historicoService.items$ | async"  [value]="huesped.nombre">
               {{huesped.nombre}}
@@ -365,10 +365,9 @@
               placeholder="Nombre completo"
               autocomplete="off"
               [class.is-invalid]="isControlInvalid('nombre')"
-              [class.is-valid]="isControlValid('nombre')"
               formControlName="nombre"
               value="{{huesped.nombre}}"
-            />
+            /><!--[class.is-valid]="isControlValid('nombre')"-->
             <div class="valid-feedback" *ngIf="isControlValid('nombre')">
               Nombre Escrito Correctamente
             </div>
@@ -404,12 +403,13 @@
             name="email"
             placeholder="Escribe tu Email"
             autocomplete="off"
-            [class.is-invalid]="isControlInvalid('email')"
-            [class.is-valid]="isControlValid('email')"
             formControlName="email"
-            (input)="emailValidator($event.target.value)"
             value="{{huesped.email}}"
-          />
+            [class.is-invalid]="isControlInvalid('email')"
+            (input)="emailValidator($event.target.value)"
+          /><!--
+          [class.is-invalid]="isControlInvalid('email')"
+            [class.is-valid]="isControlValid('email')"-->
           <div class="valid-feedback" *ngIf="isControlValid('email')">
             Email Escrito Correctamente
           </div>
@@ -441,11 +441,11 @@
             name="telefono"
             placeholder="Teléfono"
             autocomplete="off"
-            [class.is-invalid]="isControlInvalid('telefono')"
-            [class.is-valid]="isControlValid('telefono')"
             formControlName="telefono"
             value="{{huesped.telefono}}"
-          />
+            [class.is-invalid]="isControlInvalid('telefono')"
+          /><!--[class.is-invalid]="isControlInvalid('telefono')"
+            [class.is-valid]="isControlValid('telefono')"-->
           <!-- <div class="invalid-feedback" *ngIf="isControlValid('telefono')">
             Teléfono Invalido
           </div> -->
@@ -478,7 +478,7 @@
 
 
     <div style="background-color:#00506a;" class="modal-header">
-      <div style="text-align: center; color: white;" class="modal-title h4 col-12 text-center "
+      <div style="text-align: center; color: white;" class="text-center modal-title h4 col-12 "
         id="example-modal-sizes-title-lg">
        Confirmar el Tipo de Reserva
         <div class="form-group row">
@@ -488,6 +488,7 @@
                 style="background-color:#99d284 ;"
                 type="submit"
                 name="estatus"
+                [disabled]="tempCheckBox||!isControlValid('nombre')"
                 (click)="setEstatus(1)"
                 >
                   Realiza Walk-In
@@ -499,6 +500,7 @@
                 style="background-color:#fac34e ;"
                 type="submit"
                 name="estatus"
+                [disabled]="tempCheckBox||!isControlValid('nombre')"
                 (click)="setEstatus(2); "
                 >
                   Agrega Reserva
@@ -509,6 +511,7 @@
                 class="btn btn-block"
                 style="background-color:#d0aaec ;"
                 type="submit"
+                [disabled]="tempCheckBox||!isControlValid('nombre')"
                 (click)="setEstatus(5)"
                 >
                   Reserva Uso Interno
@@ -520,6 +523,7 @@
                   style="background-color:#fab3db ;"
                   type="submit"
                   value="7"
+                  [disabled]="tempCheckBox||!isControlValid('nombre')"
                   (click)="setEstatus(7)"
                   >
                   Reserva Temporal
