--- a/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
@@ -17,7 +17,7 @@
 
     <div class="row">
       <!--Hidden-->
-      <div class="hidden form-group">
+      <!-- <div class="hidden form-group">
         <div class="input-group">
           <input hidden name="datepicker" class="form-control" ngbDatepicker [footerTemplate]="footerTemplate"
             #datepicker="ngbDatepicker" [autoClose]="'outside'" (dateSelect)="onDateSelection($event)"
@@ -30,11 +30,11 @@
             </span>
           </ng-template>
         </div>
-      </div>
+      </div> -->
       <!--Hidden-->
 
 
-      <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Rango de Fecha</label>
+      <!-- <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Rango de Fecha</label>
       <div class="mb-3 input-group col-lg-9">
         <div class="input-group-prepend">
           <button
@@ -55,13 +55,37 @@
         [value]="formatter.format(fromDate)" (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
       <!--Hidden-->
       <!--Calendar Footer-->
-      <ng-template #footerTemplate>
+      <!-- <ng-template #footerTemplate>
         <hr class="my-0">
         <button class="float-right m-2 btn btn-secondary btn-sm" (click)="datepicker.close()">Confirmar</button>
-      </ng-template>
+      </ng-template> -->
       <!--Calendar Footer-->
-    </div>
+    </div> -->
 
+    <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Fecha Incial</label>
+    <div class="mb-3 input-group col-lg-6">
+      <div class="input-group-prepend">
+          <input class="form-control" placeholder="yyyy-mm-dd" name="inicial" ngbDatepicker #inicial="ngbDatepicker"
+          [value]="formatter.format(fromDate)" (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
+          <button
+          style="border-top: 2px solid #dadcdf;border-bottom: 2px solid #dadcdf;border-left: 2px solid #dadcdf; background-color: transparent;"
+          class="btn btn-outline-secondary calendar" (click)="inicial.toggle()" type="button">
+            <i class="la la-calendar"></i>
+          </button>
+      </div>
+
+      <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Fecha Final</label>
+      <div class="input-group-prepend">
+        <input class="form-control" placeholder="yyyy-mm-dd" name="final" ngbDatepicker #final="ngbDatepicker"
+        [value]="formatter.format(toDate)" (input)="toDate = validateInput(toDate, dpToDate.value)">
+        <button
+        style="border-top: 2px solid #dadcdf;border-bottom: 2px solid #dadcdf;border-left: 2px solid #dadcdf; background-color: transparent;"
+        class="btn btn-outline-secondary calendar" (click)="final.toggle()" type="button">
+          <i class="la la-calendar"></i>
+        </button>
+      </div>
+
+    </div>
 
     <div class="row">
       <label style="color:#00506a; font-weight: bold;" class="form-label">Tipo de Habitación </label>
