--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -1,7 +1,7 @@
 <div class="modal-content">
 <ng-container *ngIf="huesped.id == undefined">
   <div style="background-color: #00506a;" class="modal-header">
-    <div style="text-align: center; color: white;" class="modal-title h4 col-10 text-center"
+    <div style="text-align: center; color: white;" class="text-center modal-title h4 col-10"
       id="example-modal-sizes-title-lg">
       NUEVA RESERVA / BLOQUEO
       <!-- <label>
@@ -16,11 +16,11 @@
 </div>
 
    <form (submit)="save(); open(content)" [formGroup]="formGroup" class="form form-label-right" style="background-color: #e6e9ed">
-    <div class="overlay overlay-block cursor-default modal-body" style="background-color: #e6e9ed">
+    <div class="cursor-default overlay overlay-block modal-body" style="background-color: #e6e9ed">
 
 <div class="row">
 <!--Hidden-->
-  <div class="form-group hidden">
+  <div class="hidden form-group">
     <div class="input-group">
       <input hidden name="datepicker"
              class="form-control"
@@ -50,7 +50,7 @@
 
 
   <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Rango de Fecha</label>
-  <div class="input-group mb-3 col-lg-9">
+  <div class="mb-3 input-group col-lg-9">
     <div class="input-group-prepend">
       <button style="border-top: 2px solid #dadcdf;border-bottom: 2px solid #dadcdf;border-left: 2px solid #dadcdf; background-color: transparent;" class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button">
         <i class="fa fa-calendar icon"></i>
@@ -88,7 +88,7 @@
   <!--Calendar Footer-->
     <ng-template #footerTemplate>
     <hr class="my-0">
-    <button class="btn btn-secondary btn-sm m-2 float-right" (click)="datepicker.close()">Confirmar</button>
+    <button class="float-right m-2 btn btn-secondary btn-sm" (click)="datepicker.close()">Confirmar</button>
     </ng-template>
   <!--Calendar Footer-->
 </div>
@@ -105,7 +105,7 @@
                     </div>
                     <input
                       style="background-color: #e6e9ed; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;  border-left: 2px solid #e6e9ed;"
-                      class="input-group form-control form-control-lg form-control-solid text-center"
+                      class="text-center input-group form-control form-control-lg form-control-solid"
                       #controladultos
                       placeholder=""
                       type="number"
@@ -147,7 +147,7 @@
                       style="background-color: #e6e9ed; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf; border-left: 2px solid #e6e9ed;"
                       type="number"
                       max="6"
-                      class="input-group form-control form-control-lg form-control-solid text-center" placeholder=""
+                      class="text-center input-group form-control form-control-lg form-control-solid" placeholder=""
                       name="ninos"
                       [value]="quantityNin"
                       value={{huesped.ninos}}
@@ -220,14 +220,13 @@
              <!-- <mat-icon>account_circle</mat-icon> -->
             </mat-panel-description>
             <mat-panel-description *ngIf="bandera==true">
-
               <!-- <mat-icon>account_circle</mat-icon> -->
              </mat-panel-description>
           </mat-expansion-panel-header>
 
           <!--Contenido del Accordion-->
             <div  class="table-responsive angular-bootstrap-table">
-              <table *ngIf="bandera==false" class="table table-head-custom table-vertical-center overflow-hidden">
+              <table *ngIf="bandera==false" class="table overflow-hidden table-head-custom table-vertical-center">
                 <div class="font-weight-bold text-uppercase modal-header"> {{cuarto.replace("_"," ")}} </div>
                 <thead>
                   <th>
@@ -261,7 +260,7 @@
 <ng-container *ngIf="bandera==true">
   <ng-container *ngFor="let codigosCuarto of codigoCuarto;  let i = index">
     <div class="font-weight-bold text-uppercase modal-header">{{codigosCuarto.replace("_"," ")}}</div>
-        <table  class="table table-head-custom table-vertical-center overflow-hidden">
+        <table  class="table overflow-hidden table-head-custom table-vertical-center">
           <thead>
             <th>
               # de Cuarto
@@ -297,6 +296,7 @@
         </mat-expansion-panel>
       </mat-accordion>
      </ng-container>
+     <!--SIN DISPONIBILIDAD-->
      <ng-container *ngIf="disponibilidad.length === 0 && inicio===false"  >
       <mat-accordion [style]="accordionDisplay" class="example-headers-align" multi>
         <mat-expansion-panel>
@@ -310,31 +310,28 @@
               <!-- <mat-icon>account_circle</mat-icon> -->
             </mat-panel-description>
           </mat-expansion-panel-header>
-
           <!--Contenido del Accordion-->
-
-
         </mat-expansion-panel>
       </mat-accordion>
      </ng-container>
 
      <div style="background-color:#00506a;" class="modal-tittle">
-      <div style="color: white; padding-top: 1%; padding-bottom: 1%;" class="modal-title h5 col-12 text-center">
+      <div style="color: white; padding-top: 1%; padding-bottom: 1%;" class="text-center modal-title h5 col-12">
         Agrega Húesped
       </div>
-  </div>
+     </div>
 
-    <div class="overlay overlay-block cursor-default modal-body" style="background-color: #dadcdf">
+    <div class="cursor-default overlay overlay-block modal-body" style="background-color: #dadcdf">
       <div class="form-group">
         <div class="row">
           <label class="form-label" for="form1">Buscar en Historico</label>
-          <div  class="input-group col-lg-12 text-center">
+          <div  class="text-center input-group col-lg-12">
               <input  type="search"
                       placeholder="Busca por Nombre"
                       aria-label="Number"
                       matInput
                       formControlName="searchTerm"
-                      class="form-control col-lg-12 text-center"
+                      class="text-center form-control col-lg-12"
                       (keyup)="showList($event)"
                       value="{{searchValue}}"
                       oninput="this.value = this.value.toLowerCase()"
@@ -478,7 +475,7 @@
 
 
     <div style="background-color:#00506a;" class="modal-header">
-      <div style="text-align: center; color: white;" class="modal-title h4 col-12 text-center "
+      <div style="text-align: center; color: white;" class="text-center modal-title h4 col-12 "
         id="example-modal-sizes-title-lg">
        Confirmar el Tipo de Reserva
         <div class="form-group row">
