--- a/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
@@ -10,94 +10,79 @@
 
     </div>
 </div>
-
-<form (submit)="save(text.value); "  class="form form-label-right"
+<!--(submit)="save(text.value); "-->
+<form (ngSubmit)="onFormSubmit(text.value)" class="form form-label-right"
   style="background-color: #e6e9ed">
   <div class="cursor-default overlay overlay-block modal-body" style="background-color: #e6e9ed">
 
+
+
     <div class="row">
-      <!--Hidden-->
-      <!-- <div class="hidden form-group">
-        <div class="input-group">
-          <input hidden name="datepicker" class="form-control" ngbDatepicker [footerTemplate]="footerTemplate"
-            #datepicker="ngbDatepicker" [autoClose]="'outside'" (dateSelect)="onDateSelection($event)"
-            [displayMonths]="1" [dayTemplate]="t" outsideDays="hidden" [startDate]="fromDate!" tabindex="-1">
-          <ng-template #t let-date let-focused="focused">
-            <span class="custom-day" [class.focused]="focused" [class.range]="isRange(date)"
-              [class.faded]="isHovered(date) || isInside(date)" (mouseenter)="hoveredDate = date"
-              (mouseleave)="hoveredDate = null">
-              {{ date.day }}
-            </span>
-          </ng-template>
+      <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Fecha Incial</label>
+      <div class="col-lg-12">
+        <div class="form-group">
+          <div class="input-group">
+
+            <input hidden class="form-control" placeholder="yyyy-mm-dd" name="dp"  ngbDatepicker
+            (dateSelect)="fechaSeleccionadaInicial($event)" #d="ngbDatepicker">
+
+            <input class="form-control" placeholder="yyyy-mm-dd" name="dpnotHidden" #dd [value]="fechaInicialBloqueo" >
+
+              <div class="input-group-append">
+              <button class="btn btn-primary" (click)="d.toggle()" type="button">
+                <i class="fa fa-calendar icon"></i>
+              </button>
+            </div>
+          </div>
         </div>
-      </div> -->
-      <!--Hidden-->
-
-
-      <!-- <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Rango de Fecha</label>
-      <div class="mb-3 input-group col-lg-9">
-        <div class="input-group-prepend">
-          <button
-            style="border-top: 2px solid #dadcdf;border-bottom: 2px solid #dadcdf;border-left: 2px solid #dadcdf; background-color: transparent;"
-            class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button">
-            <i class="fa fa-calendar icon"></i>
-          </button>
-        </div>
-        <input #rango type="text"
-          style="border-right: 2px solid #dadcdf;border-top: 2px solid #dadcdf;border-bottom: 2px solid #dadcdf; background-color: #e6e9ed; color: #02597e;"
-          class="form-control" [value]="rangoFechas(dpFromDate.value,dpToDate.value)" (click)="datepicker.toggle()">
-      </div>
-
-      <!--Hidden-->
-      <input hidden #dpToDate class="form-control" placeholder="yyyy-mm-dd" name="dpToDate"
-        [value]="formatter.format(toDate)" (input)="toDate = validateInput(toDate, dpToDate.value)">
-      <input hidden #dpFromDate class="form-control" placeholder="yyyy-mm-dd" name="dpFromDate"
-        [value]="formatter.format(fromDate)" (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
-      <!--Hidden-->
-      <!--Calendar Footer-->
-      <!-- <ng-template #footerTemplate>
-        <hr class="my-0">
-        <button class="float-right m-2 btn btn-secondary btn-sm" (click)="datepicker.close()">Confirmar</button>
-      </ng-template> -->
-      <!--Calendar Footer-->
-    </div> -->
-
-    <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Fecha Incial</label>
-    <div class="mb-3 input-group col-lg-6">
-      <div class="input-group-prepend">
-          <input class="form-control" placeholder="yyyy-mm-dd" name="inicial" ngbDatepicker #inicial="ngbDatepicker"
-          [value]="formatter.format(fromDate)" (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
-          <button
-          style="border-top: 2px solid #dadcdf;border-bottom: 2px solid #dadcdf;border-left: 2px solid #dadcdf; background-color: transparent;"
-          class="btn btn-outline-secondary calendar" (click)="inicial.toggle()" type="button">
-            <i class="la la-calendar"></i>
-          </button>
-      </div>
-
-      <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Fecha Final</label>
-      <div class="input-group-prepend">
-        <input class="form-control" placeholder="yyyy-mm-dd" name="final" ngbDatepicker #final="ngbDatepicker"
-        [value]="formatter.format(toDate)" (input)="toDate = validateInput(toDate, dpToDate.value)">
-        <button
-        style="border-top: 2px solid #dadcdf;border-bottom: 2px solid #dadcdf;border-left: 2px solid #dadcdf; background-color: transparent;"
-        class="btn btn-outline-secondary calendar" (click)="final.toggle()" type="button">
-          <i class="la la-calendar"></i>
-        </button>
-      </div>
-
     </div>
+  </div>
+  <div class="row">
+    <!-- <div [hidden]="fechasIncorrectas">
+     <small> <label  style="color: #fa6d7c; font-weight:bold">La fecha inicial no puede ser mayor que la fecha final seleccione otro rango de fechas para el bloqueo</label></small>
+    </div> -->
+ </div>
+    <div class="row">
+        <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Fecha Final</label>
+        <div class="col-lg-12">
+          <div class="form-group" >
+            <div class="input-group">
+              <input hidden class="form-control"  placeholder="yyyy-mm-dd" name="dp"  ngbDatepicker
+              (dateSelect)="fechaSeleccionadaFinal($event)" #f="ngbDatepicker">
+
+              <input class="form-control"  placeholder="yyyy-mm-dd" name="dpnotHidden" #ff [value]="fechaFinalBloqueo" >
+
+              <div class="input-group-append">
+                <button class="btn btn-primary" (click)="f.toggle()" type="button">
+                  <i class="fa fa-calendar icon"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <div *ngIf="display==false" class="row">
+       <small> <label #contentPlaceholder  style="color: #fa6d7c; font-weight:bold">La fecha inicial no puede ser mayor que la fecha final seleccione otro rango de fechas para el bloqueo</label></small>
+   </div>
+
 
     <div class="row">
       <label style="color:#00506a; font-weight: bold;" class="form-label">Tipo de Habitación </label>
       <div class="col-lg-12">
-        <mat-select #tipoCuarto
+        <mat-select [formControl]="tipoCuarto"
                     class="form-control form-control-lg form-control-solid"
                     name="habitacion"
                     (selectionChange)="habValue($event)"
-                    placeholder="-- Seleccione Tipo de Habitación -- ">
+                    placeholder="-- Seleccione Tipo de Habitación -- " required
+                    >
             <mat-option value="1">Todos los Tipos de Cuartos</mat-option>
             <mat-option *ngFor="let tipoCuarto of codigoCuarto" [value]="tipoCuarto">{{tipoCuarto.replace("_"," ")}} </mat-option>
         </mat-select>
+            <!--Error Block-->
+        <mat-error *ngIf="tipoCuarto.hasError('required')">
+          <strong>*Campo Obligatorio</strong>
+        </mat-error>
       </div>
     </div>
 <br>
@@ -106,7 +91,7 @@
       <div class="col-lg-12">
           <mat-select #matSelect
                       class="form-control form-control-lg form-control-solid"
-                      [formControl]="habitacionfb"
+                      [formControl]="numeroHab"
                       multiple
                       placeholder="-- {{placeHolder}} -- ">
             <footer>
@@ -117,6 +102,10 @@
                 <mat-option #matOption (click)="cuartoValue(matOption.selected,matOption.value);" *ngFor="let numero of mySet" [value]="numero">{{numero}}</mat-option>
               </div>
           </mat-select>
+                      <!--Error Block-->
+        <mat-error *ngIf="numeroHab.hasError('required')">
+          <strong>*Campo Obligatorio</strong>
+        </mat-error>
       </div>
     </div>
 
@@ -129,7 +118,6 @@
                           #sinLlegadas
                           (change)="toggleLlegadas($event)"
                           style="margin: 5pxpx; color:#00506a; font-weight: bold;"
-                          class="example-margin"
                           [checked]="sinLlegadasChecked">
                           No hay Llegadas &nbsp;
             </mat-checkbox>
@@ -137,12 +125,18 @@
                           #sinSalidas
                           (change)="toggleSalidas($event)"
                           style="color:#00506a; font-weight: bold;"
-                          class="example-margin"
                           [checked]="sinSalidasChecked">
                           No Hay Salidas
             </mat-checkbox>
+            <mat-checkbox
+                          #sinSalidas
+                          (change)="toggleFuera($event)"
+                          style="color:#00506a; font-weight: bold;"
+                          [checked]="fueraDeServicioChecked">
+                          Fuera de Servicio
+            </mat-checkbox>
           </section>
-        <small>No Hay Llegadas + Salidas = <label  style="color: #fa6d7c; font-weight:bold">Fuera de Servicio</label></small>
+        <!-- <small>No Hay Llegadas + Salidas = <label  style="color: #fa6d7c; font-weight:bold">Fuera de Servicio</label></small> -->
       </div>
         </div>
         <br>
@@ -297,6 +291,15 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-primary" (click)="borrar(idDelete,desdeDelete,hastaDelete,habitacionDelete,numeroDelete);modal.close('Close click')">Borrar</button>
+    <button type="button" class="btn btn-danger" (click)="modal.close('Close click')">Cerrar</button>
+  </div>
+</ng-template>
+
+<ng-template #fechaIncorrecta let-modal>
+  <div class="modal-body">
+    <p>La fecha final no puede ser Menor a la Fecha incial intente otro rango de fechas?&hellip;</p>
+  </div>
+  <div class="modal-footer">
     <button type="button" class="btn btn-danger" (click)="modal.close('Close click')">Cerrar</button>
   </div>
 </ng-template>
