--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -34,7 +34,7 @@
              outsideDays="hidden"
              [startDate]="fromDate!"
              tabindex="-1"
-             [minDate]=fromDate>
+             [minDate]=today>
       <ng-template #t let-date let-focused="focused">
         <span class="custom-day"
               [class.focused]="focused"
@@ -177,11 +177,13 @@
                       <select
                           class="form-control form-control-lg form-control-solid"
                           name="habitacion"
+                          #tipodeCuartoDropDown
                           formControlName="habitacion"
                           (change)="habValue($event)"
+                          [value]=tipodeCuartoDropDown
                         >
-                        <option selected value="0">-- Cualquiera ---</option>
-                        <option value="1">Todos los Cuartos</option>
+                        <option selected value="0">-- Selecciona Habitación ---</option>
+                        <option value="1">Todos las Habitaciones</option>
                         <ng-container *ngFor="let tipoCuarto of codigoCuarto">
                           <option> {{tipoCuarto.replace("_"," ")}} </option>
                         </ng-container>
@@ -200,7 +202,7 @@
                     <button
                       style="background-color: #ffce54;"
                         class="btn btn-block"
-                        (click)="buscaDispo();setStep(1) "
+                        (click)="setStep(1);buscaDispo(); "
                         type="button"
                         > Buscar Disponibilidad
                     </button>
@@ -210,7 +212,7 @@
 
 
 
-  <ng-container *ngIf="disponibilidad.length !==0 ">
+  <ng-container *ngIf="mySet.size !==0 ">
       <mat-accordion [style]="accordionDisplay" class="example-headers-align" multi>
         <mat-expansion-panel  [expanded]="step === 1"  hideToggle>
             <mat-expansion-panel-header style="background-color:#99d284;">
@@ -298,7 +300,7 @@
       </mat-accordion>
      </ng-container>
      <!--SIN DISPONIBILIDAD-->
-     <ng-container *ngIf="disponibilidad.length === 0 && inicio===false"  >
+     <ng-container *ngIf="mySet.size === 0 && inicio===false"  >
       <mat-accordion  [style]="accordionDisplay" class="example-headers-align" multi>
         <mat-expansion-panel>
             <mat-expansion-panel-header style="background-color:#fa6d7c;">
